--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
     "express": "^4.16.4",
+    "geolib": "^2.0.24",
     "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.3.3",
