--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
+    "cors": "^2.8.4",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.3.3",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "socket.io": "^2.1.1"
   }
 }
