--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "mocha": "^5.2.0",
     "mongoose": "^5.3.3",
     "nodemon": "^1.18.4",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "socketio": "^1.0.0"
   }
 }
