--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "geolib": "^2.0.24",
+    "js-priority-queue": "^0.1.5",
     "jsonwebtoken": "^8.3.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.3.3",
